# chessatk

./: Cargo.toml
chessatk_cli/: Cargo.toml
chessatk_cli/src/: lichess.rs  main.rs  uci.rs
chessatk_gui/: Cargo.toml
chessatk_gui/src/: main.rs
chessatk_lib/: Cargo.toml
chessatk_lib/src/: board.rs  engine.rs  lib.rs  mcts.rs  messages.rs
src/: board.rs  engine.rs  lichess.rs  main.rs  mcts.rs  messages.rs  uci.rs
tests/: positions.fen
