[package]
name = "chessatk"
edition = "2018"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[profile.release] 
debug = true
#lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rand = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
rayon = "1"
fxhash = "0.2"
smallvec = { version = "1", features = ["union"] }
