[dependencies]
rand = "0.8"
chessatk_lib = { path = "../chessatk_lib" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
fxhash = "0.2"

[package]
name = "chessatk_cli"
edition = "2021"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

